--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div id="headerCurve"></div>
 <div id="headerContent">
-    <a href="giveTOHome.html"><!--<%= image_tag "logo.png", :alt => 'giveTo logo' %>--><img src="../images/logo.png" id="logo" alt="giveTO Logo" /></a>
+    <a href="/"><!--<%= image_tag "logo.png", :alt => 'giveTo logo' %>--><img src="../images/logo.png" id="logo" alt="giveTO Logo" /></a>
     <span id="menu">
 			<span id="menuNew">What's New</span>
 			<span id="menuSched">Schedule</span>
