--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>giveTO</title>
+	  <title><%= title %></title>
 	  <%= csrf_meta_tag %>
 		<%= render 'layouts/stylesheets' %>
 	</head>
