--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,4 @@
 <div id="footer">
+      <img style="margin: 10px;" src="../images/worldBorder5.png" alt="world" />
 </div>
+<!--<div id="footerCurve"></div>-->
