--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div id="headerCurve"></div>
+<!--<div id="headerCurve"></div>-->
 <div id="headerContent">
 	<div id="signIn">
       <form action="post" name="signInForm">
