--- a/public/stylesheets/giveTOstyle.css
+++ b/public/stylesheets/giveTOstyle.css
@@ -25,17 +25,22 @@ a:visited {
 #headerContent {
     width: 800px;
     margin: auto;
+		margin-top: 15px;
     text-align: center; /*for ie*/    
     background-color: white;  
-    padding: 0px 10px 0px 10px;
+    padding: 5px 10px 0px 10px;
     text-align: left;
-    border-top: 1px dotted #666666;
     /*border-bottom: 2px dashed #666666;*/
+		-webkit-border-top-right-radius: 15px;
+		-webkit-border-top-left-radius: 15px;
+		-moz-border-radius-topright: 15px;
+		-moz-border-radius-topleft: 15px;
+		border-top-right-radius: 15px;
+		border-top-left-radius: 15px;
 }
 
 #menu {
-    float: right;
-
+	float: right;
 }
 
 #menu span {
@@ -125,7 +130,7 @@ table td {
     margin: 5px;
     padding: 5px 50px 10px 50px;
     background-image: url('../images/submitButtonBlueBig.png');
-    font-size: 13pt;
+    font-size: 1.0em;
 }
 
 body img {
@@ -159,15 +164,15 @@ form p{
 }
 */
 #content {
-    width: 800px;
+    width: 820px;
     margin: auto;
     text-align: center; /*for ie*/    
     background-color: #E6E6E6;
     opacity: .9;
     padding: 5px;
     height: auto;
-    border-left: 5px solid #666666;
-    border-right: 5px solid #666666;
+   /* border-left: 5px solid #666666;
+    border-right: 5px solid #666666;*/
 }
 
 #content p#intro {
@@ -191,12 +196,26 @@ form p{
 }
 
 #footer {
-    background-image: url('../images/bottomCurve.png');
+    background: #666666 ;
     width: 820px;
-    height: 100px;
     background-repeat: no-repeat;
     margin: auto;
-    padding: 0px;    
+    padding: 0px;
+		-webkit-border-bottom-right-radius: 15px;
+		-webkit-border-bottom-left-radius: 15px;
+		-moz-border-radius-bottomright: 15px;
+		-moz-border-radius-bottomleft: 15px;
+		border-bottom-right-radius: 15px;
+		border-bottom-left-radius: 15px;    
+}
+
+#footerCurve {
+	background-image: url('../images/bottomCurve.png'); 
+	background-repeat: no-repeat;
+	height: 20px;
+	width: 820px;
+	margin: auto;
+	padding: 0px;
 }
 
 #headerCurve {
@@ -206,7 +225,6 @@ form p{
     background-repeat: no-repeat;
     margin: auto;
     padding: 0px;  
-    border-bottom: 3px solid #3D6CC1;    
 }
 
 #logo {
