--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div id="content">
+	<h1>Pages#contact</h1>
+	<p>Find me in app/views/pages/contact.html.erb</p>
+</div>
