Fixed most tests

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,4 +1,5 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'giveToStyle', :media => 'screen' %>
+<%= stylesheet_link_tag 'giveTOStyle', :media => 'screen' %>
+<%= stylesheet_link_tag 'errors', :media => 'screen' %>
