--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
+		<% flash.each do |key, value| %>
+			<div class="flash <%= key %>"><%= value %></div>
+		<% end %>
 		<%= yield %> 
 		<%= render 'layouts/footer' %>
 	</body>
