fixed logo link?

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       
       </form>
   </div>
-    <a style="float:left;" href="/"><%= image_tag "logo.png", :id => 'giveTO logo', :alt => 'giveTo logo' %></a>
+    <a style="float:left;" href="/"><%= image_tag "logo.png", :id => 'logo', :alt => 'giveTo logo' %></a>
 <div class="clear"></div>
     <span id="menu">
 			<span id="menuNew">What's New</span>
