--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
   </div>
    <a style="float:left;" href="/">
 		<!-- <%= image_tag "logo.png", :id => 'logo', :alt => 'giveTo logo' %> -->
-		<img src="../images/logo.png" alt="giveTo" />
+		<img src="../images/worldBorder5.png" alt="giveTo" />
 	</a>
 	<div class="clear"></div>
    <span id="menu">
