--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,9 +23,8 @@
 	      </table>
       </form>
   </div>
-   <a style="float:left;" href="/">
-		<!-- <%= image_tag "logo.png", :id => 'logo', :alt => 'giveTo logo' %> -->
-		<img src="../images/worldBorder5.png" alt="giveTo" />
+	<a style="float:left;" href="/">
+		<%= image_tag "logo2.png", :id => 'logo', :alt => 'giveTo logo' %>
 	</a>
 	<div class="clear"></div>
    <span id="menu">
