--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
     </p>
 		
 		<%= form_for(@user) do |f| %>
+		 <%= render 'shared/error_messages' %>
 		<p>
 			<%= f.label :first_name %>
 			<%= f.text_field :first_name, :size => 30 %>
