--- a/public/stylesheets/errors.css
+++ b/public/stylesheets/errors.css
@@ -3,6 +3,7 @@
   border: 2px solid red;
   padding: 7px;
   padding-bottom: 12px;
+	margin: auto;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 }
@@ -11,7 +12,7 @@
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
-  font-size: 12px;
+  font-size: 0.8em;
   margin: -7px;
   background-color: #c00;
   color: #fff;
@@ -19,11 +20,18 @@
 
 #error_explanation p {
   color: #333;
+	text-align: left;
+	margin-left: 5px;
   margin-bottom: 0;
   padding: 5px;
 }
 
 #error_explanation ul li {
-  font-size: 12px;
+	text-align: left;
+  font-size: 0.8em;
   list-style: square;
+}
+
+.field_with_errors {
+	display: inline;
 }
