--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+</div> <!-- close content div -->
 <div id="footer">
       <img style="margin: 10px;" src="../images/worldBorder5.png" alt="world" />
 </div>
