--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <!--<div id="headerCurve"></div>-->
 <div id="headerContent">
 	<div id="signIn">
+
+<!--
       <form action="post" name="signInForm">
       	<h2>Sign in</h2>
 	      <table>
@@ -21,7 +23,8 @@
 							<td></td>
 						</tr>
 	      </table>
-      </form>
+      </form>-->
+
   </div>
 	<a style="float:left;" href="/">
 		<%= image_tag "logo2.png", :id => 'logo', :alt => 'giveTo logo' %>
@@ -32,6 +35,12 @@
 		<span id="menuSched">Schedule</span>
 		<span id="menuOrg">Orgnizations</span>
 		<span id="menuAbout">About</span>
+		<% if signed_in? %>
+			<%= link_to "Profile", current_user %>
+			<%=	link_to "Sign out", signout_path, :method => :delete %>
+		<% else %>
+			<%= link_to "Sign in", signin_path %>
+		<% end %>
 	</span>
 	<div class="clear"></div>
 </div>
