Added HTML for about, event list, single event, user profile, event submit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,16 @@
-<h1>Hello, <%= @user.first_name %>!</h1>
+<div class="insideDiv">
+	<h1>Hello, <%= @user.first_name %>!</h1>
+	<h3 class="headerBar">Your Opportunities:</h3>
+	<div class="tiles">
+		<h4>Events FOR You</h4>
+		<p>3/16/2011: Plant a tree day<br />
+		   3/18/2011: Habitat for Humanity</p>
+		<span class="smallButton">Find More Opportunities</span>
+	</div>
+	<div class="tiles">
+		<h4>Events BY You</h4>
+		<p>(no upcoming events)</p>
+		
+		<span class="smallButton">Submit a new Opportunity</span>
+	</div>
+</div>
