--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,36 +1,44 @@
-    <p id="intro">
-        giveTo is free, fun and easy. Sign up now to give back to your commnity.
-    </p>
-    <div id="mainForm">
-        <form method="post" action="" name="fullSignInForm" id="fullForm">
-            <h2>Register Volunteer Opportunity</h2>
-            <p><label for="fullName">full name: </label> <input type="text" name="fname" id="fullName" size="30" /></p>
-            <p><label for="nEmail">email: </label><input type="text" name="newEmail" id="nEmail" size="30" /></p>
-            <p><label for="org">affiliated organization (if any): </label><input type="text" name="newOrg" id="org" size="30" /></p>
-            <h2>Information About Volunteer Opportunity</h2>
-            <p><label for="title">title: </label><input type="text" name="newTitle" id="title" size="30" /></p>
-            <p><label for="date">date: </label><input type="text" name="newDate" id="date" size="30" /></p>
-            <p><label for="start1">start time: </label><input type="text" name="newStart" id="start1" size="3" /> : <input type="text" name="newStart" id="start2" size="4" />
-                <input type="radio" name="startAmpm" value="am" /> AM <input type="radio" name="startAmpm" value="pm" />PM</p>
-            <p><label for="end1">end time: </label><input type="text" name="newEnd" id="end1" size="3" /> : <input type="text" name="newEnd" id="end2" size="4" />
-                <input type="radio" name="endAmpm" value="am" /> AM <input type="radio" name="endAmpm" value="pm" />PM</p>
-            <p><label for="desc">description: </label><textarea name="newDesc" id="desc" rows="5" cols="23" ></textarea></p>
-            <p><label for="amount">amount of helpers needed: </label><input type="text" name="newAmount" id="amount" size="30" /></p>
-            <input class="submitButton" id="submitBig" type="submit" value="Submit!" />
-        </form>
-    </div>
-<!--                <div id="featured">
-        
-<!-\-                    <table id="featuredTable">
-            <tr><td><h2>Featured Organization</h2></td><td></td></tr>
-            <tr>
-                <td><img src="http://beetlebabee.files.wordpress.com/2010/03/girl_scouts.jpg" alt="girl scouts" height="200px" /></td>
-                <td>
-                    <p><strong>Who</strong>: Campus Girls Scouts</p>
-                    <p><strong>Recent Work</strong>: It is that time of the year, Cookie Sales!!! Buy your box today</p>
-                    <p><strong>Fun Fact</strong>: Their three keys to leadership include Discover, Connect and Take Action. Now that's inspiring!</p>
-                    <p><strong>Current Volunteer Opportunities</strong> They are always looking for help selling cookies in front of the University Bookstore.</p>
-                </td>
-            </tr>
-        </table>-\->
-    </div>-->
+<p id="intro">
+                    giveTo is free, fun and easy. Sign up now to give back to your commnity.
+                </p>
+                <div id="mainForm">
+                    <form method="post" action="" name="fullSignInForm" id="fullForm">
+                        <h2>Register Volunteer Opportunity</h2>
+                        <p><label for="fullName">full name: </label> <input type="text" name="fname" id="fullName" size="30" /></p>
+                        <p><label for="nEmail">email: </label><input type="text" name="newEmail" id="nEmail" size="30" /></p>
+                        <p><label for="org">affiliated organization (if any): </label><input type="text" name="newOrg" id="org" size="30" /></p>
+                        <h2>Information About Volunteer Opportunity</h2>
+                        <p><label for="title">title: </label><input type="text" name="newTitle" id="title" size="30" /></p>
+                        <p><label for="date">date: </label><input type="text" name="newDate" id="date" size="30" /></p>
+                        <p><label for="start1">start time: </label><input type="text" name="newStart" id="start1" size="3" /> : <input type="text" name="newStart" id="start2" size="4" />
+                            <input type="radio" name="startAmpm" value="am" /> AM <input type="radio" name="startAmpm" value="pm" />PM</p>
+                        <p><label for="end1">end time: </label><input type="text" name="newEnd" id="end1" size="3" /> : <input type="text" name="newEnd" id="end2" size="4" />
+                            <input type="radio" name="endAmpm" value="am" /> AM <input type="radio" name="endAmpm" value="pm" />PM</p>
+                        <p><label for="desc">description: </label><textarea name="newDesc" id="desc" rows="5" cols="23" ></textarea></p>
+                        <p><label for="amount">amount of helpers needed: </label><input type="text" name="newAmount" id="amount" size="30" /></p>
+                        <p><br />Select category most similar to opportunity:</p>
+						<select name="dropCategories">
+							<option value="Academic" /> Academic </option>
+							<option value="Business" /> Business </option>
+                            <option value="Cultural" /> Cultural/International</option>
+                            <option value="Engineering" /> Engineering </option>
+                            <option value="Fraternities" /> Fraternities &amp; Sororities (any type) </option>
+                            <option value="Health" /> Health Sciences </option>
+							<option value="Honorary" /> Honorary </option>
+							<option value="Law" /> Law </option>
+							<option value="LivingGroups" /> Living Groups </option>
+							<option value="Medical" /> Medical/Dental/Nursing </option>
+                            <option value="Performing" /> Performing </option>
+                            <option value="Political" /> Political/Social Action </option>
+                            <option value="Recreation" /> Recreation </option>
+                            <option value="Religious" /> Religious/Spiritual </option>
+                            <option value="Sciences" /> Sciences </option>
+                            <option value="Special" /> Special Interest </option>
+                            <option value="Sports" /> Sports </option>
+                            
+						</select> Other: <input type="text" name="otherCat" id="textOtherCat" size="15" />
+                        
+						<br />
+                        <input class="submitButton" id="submitBig" type="submit" value="Sign me up!" />
+                    </form>
+                </div>
