--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,26 @@
-<h1><%= @event.name %></h1>
-<ul>
-	<li>Where: <%= @event.location %></li>
-	<li>Start time: <%= @event.start_time %></li>
-	<li>End time: <%= @event.end_time %></li>
-	<li>Volunteers needed: <%= @event.volunteers_needed %></li>
-</ul>
+<div class="insideDiv">
+	<h3 class="headerBar">Plant a tree day</h3>
+	<table class="eventDisplay">
+		<colgroup width="20%"></colgroup>
+		<colgroup></colgroup>
+		<tr>
+			<td>Hosted by:</td><td>Nature Consortium</td>
+		</tr>
+		<tr>
+			<td>When:</td><td>March 18, 2011</td>
+		</tr>
+		<tr>
+			<td>Where:</td><td>Carriage Crest Elementary School<br />1425 Se 140th St</br />Kent, WA 98058</td>
+		</tr>
+		<tr>
+			<td>Description:</td><td>We will be planting trees for christmas 10 years from now.
+				(Category: Special Interest)</td>
+		</tr>
+		<tr>
+			<td colspan="2"><span id="smallerButton" class="smallButton">Add to My Events</span>
+		</tr>
+		<tr>
+			<td colspan="2">for more information contact Nature Consortium at gogreen@natureconsortium.com</td>
+		</tr>
+	</table>
+</div>
