--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,11 +22,11 @@
 		</p>
 		<p>
 			<%= f.label :password %>
-			<%= f.text_field :password, :size => 30 %>
+			<%= f.password_field :password, :size => 30 %>
 		</p>
 		<p>
 			<%= f.label :password_confirmation %>
-			<%= f.text_field :password_confirmation	, :size => 30 %>
+			<%= f.password_field :password_confirmation	, :size => 30 %>
 		</p>
 		<%= image_submit_tag "../images/submitButtonBlueBig.png" %>
 		<% end %>
