--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
    <span id="menu">
 		<span id="menuNew">What's New</span>
 		<span id="menuSched">Schedule</span>
-		<span id="menuOrg">Orgnizations</span>
+		<span id="menuOrg">Organizations</span>
 		<span id="menuAbout">About</span>
 		<% if signed_in? %>
 			<%= link_to "Profile", current_user %>
