--- a/app/views/events/all.html.erb
+++ b/app/views/events/all.html.erb
@@ -4,9 +4,9 @@
 		<tr>
 			<th>Date</th><th>Name</th><th>Host</th><th>Category</th>
 		</tr>
-		<%= @events.each do |event| %>
+		<% @events.each do |event| %>
 			<tr>
-				<td><%= event.strftime("%m/%d/%Y") %></td>
+				<td><%= event.start_time.strftime("%m/%d/%Y") %></td>
 				<td><%= event.name %></td>
 				<td><%= event.organization %></td>
 				<td><%= event.rso_type %></td>
