Fixed sign up form

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,7 +2,7 @@
    <!-- giveTo is free, fun and easy. Sign up now to give back to your community.-->
 </p>
 <div id="mainForm">
-	<% form_for(@event) do |f| %>
+	<%= form_for(@event) do |f| %>
 		<h2>Register Volunteer Opportunity</h2>
 		<div>
 			<% #f.label :name %>
