added javascript helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 	  <title><%= title %></title>
 	  <%= csrf_meta_tag %>
 		<%= render 'layouts/stylesheets' %>
+		<%= render 'layouts/javascript' %>
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
