--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -3,3 +3,4 @@
 <![endif]-->
 <%= stylesheet_link_tag 'giveTOstyle', :media => 'screen' %>
 <%= stylesheet_link_tag 'errors', :media => 'screen' %>
+<%= stylesheet_link_tag 'calendar', :media => 'screen' %>
