--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -1,19 +1,3 @@
-* {
-	/* old-style reset here :) */
-	border: 0px;
-	padding: 0px;
-}
-body {
-	font-family: Helvetica;
-	background: white;
-	text-align: center;
-	background: url(../img/body.png) repeat-x;
-}
-body h1 {
-	padding-top: 20px;
-	font-size: 26px;
-	color: #335;
-}
 table {
 	border-collapse: separate;
 	border: 1px solid #9DABCE;
@@ -26,7 +10,7 @@ td, th {
 	height: 81px;
 	text-align: center;
 	vertical-align: middle;
-	background: url(../img/cells.png);
+	background: url(../images/calendar/cells.png);
 	color: #444;
 	position: relative;
 }
@@ -47,7 +31,7 @@ td.date_has_event:hover {
 	background-position: 162px -81px;
 }
 td.padding {
-	background: url(../img/calpad.jpg);
+	background: url(../images/calendar/calpad.jpg);
 }
 td.padding_empty{
 
@@ -68,7 +52,7 @@ td.today:hover {
 	display: none;
 	z-index: 1000;
 	padding: 15px;
-	background: #E7ECF2 url(../img/popup.png) no-repeat;
+	background: #E7ECF2 url(../images/calendar/popup.png) no-repeat;
 	color: white;
 	border: 1px solid white;
 	font-size: 15px;
