--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,47 +1,19 @@
-<!--<div id="headerCurve"></div>-->
 <div id="headerContent">
 	<div id="headerGuts">
-	<div id="signIn">
-
-<!--
-      <form action="post" name="signInForm">
-      	<h2>Sign in</h2>
-	      <table>
-	          <tr>
-							<td>
-								<input type="text" name="existingEmail" size="20" />
-							</td>
-							<td>
-								<input type="password" name="existingPw" size="16" />
-							</td>
-							<td>
-								<input class="submitButton" type="submit" value="sign in" />
-							</td>
-						</tr>
-	          <tr>
-							<td>email</td>
-							<td>password</td>
-							<td></td>
-						</tr>
-	      </table>
-      </form>-->
-
-  </div>
-	<a style="float:left;" href="/">
-		<%= image_tag "giveTOlogoWhite.png", :id => 'logo', :alt => 'giveTo logo' %>
-	</a>
-	<!--<div class="clear"></div>-->
-   <span id="menu">
-		<span id="menuSched">Schedule</span>
-		<% if signed_in? %>
-			<%= link_to "Profile", current_user %>
-			<%=	link_to "Sign out", signout_path, :method => :delete %>
-		<% else %>
-			<%= link_to "Sign in", signin_path %>
-		<% end %>
-	</span>
-	<div class="clear"></div>
-</div>
+		<a style="float:left;" href="/">
+			<%= image_tag "giveTOlogoWhite.png", :id => 'logo', :alt => 'giveTo logo' %>
+		</a>
+	   <span id="menu">
+			<span class="menu_button"><a href="/events/all">Events</a></span>
+			<% if signed_in? %>
+				<span class="menu_button"><%= link_to "Profile", current_user %></span>
+				<span class="menu_button"><%=	link_to "Sign out", signout_path, :method => :delete %></span>
+			<% else %>
+				<span class="menu_button"><%= link_to "Sign in", signin_path %></span>
+			<% end %>
+		</span>
+		<div class="clear"></div>
+	</div>
 </div>
 <div id="content">
-	<div id="contentGuts">
+	<div id="contentGuts"><div>&nbsp;</div>
