--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -4,3 +4,4 @@
 <%= stylesheet_link_tag 'giveTOstyle', :media => 'screen' %>
 <%= stylesheet_link_tag 'errors', :media => 'screen' %>
 <%= stylesheet_link_tag 'calendar', :media => 'screen' %>
+<%= stylesheet_link_tag 'buttons', :media => 'screen' %>
