--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,7 @@
-<div id="contentGuts">
-	<p id="intro">
-		<br /><br />Welcome to giveTO, your one stop shop for volunteer opportunities in the University District.<br /><br />
-	</p>
-	<div id="giantButtons">
-		<a href="http://www.google.com"><%= image_tag "bigButtonsFind.png", :alt => 'Find a volunteer opportunity' %></a>
-		<a href="http://www.google.com"><img src="../images/bigButtonsSubmit.png" alt="Submit a Volunteer Opportunity" /></a>
-	</div>
+<p id="intro">
+	<br /><br />Welcome to giveTO, your one stop shop for volunteer opportunities in the University District.<br /><br />
+</p>
+<div id="giantButtons">
+	<a href="/events/all"><%= image_tag "bigButtonsFind.png", :alt => 'Find a volunteer opportunity' %></a>
+	<a href="/events/new"><img src="../images/bigButtonsSubmit.png" alt="Submit a Volunteer Opportunity" /></a>
 </div>
